@@ -2090,13 +2090,13 @@ Options: utf8
 No first char
 No need char
 Subject length lower bound = 1
-Starting byte set: \x09 \x20 \xa0 \xe1 \xe2 \xe3 
+Starting byte set: \x09 \x20 \xc2 \xe1 \xe2 \xe3 
     ABC\x{09}
  0: \x{09}
     ABC\x{20}
  0:  
     ABC\x{a0}
- 0: \xa0
+ 0: \x{a0}
     ABC\x{1680}
  0: \x{1680}
     ABC\x{180e}
@@ -2124,7 +2124,7 @@ Options: utf8
 No first char
 No need char
 Subject length lower bound = 1
-Starting byte set: \x0a \x0b \x0c \x0d \x85 \xe2 
+Starting byte set: \x0a \x0b \x0c \x0d \xc2 \xe2 
     ABC\x{0a}
  0: \x{0a}
     ABC\x{0b}
@@ -2134,7 +2134,7 @@ Starting byte set: \x0a \x0b \x0c \x0d \x85 \xe2
     ABC\x{0d}
  0: \x{0d}
     ABC\x{85}
- 0: \x85
+ 0: \x{85}
     ABC\x{2028}
  0: \x{2028}
 
@@ -2152,7 +2152,7 @@ Options: utf8
 No first char
 No need char
 Subject length lower bound = 2
-Starting byte set: \x0a \x0b \x0c \x0d \x85 \xe2 
+Starting byte set: \x0a \x0b \x0c \x0d \xc2 \xe2 
 
 /\h*A/SI8
 Capturing subpattern count = 0
@@ -2160,7 +2160,7 @@ Options: utf8
 No first char
 Need char = 'A'
 Subject length lower bound = 1
-Starting byte set: \x09 \x20 A \xa0 \xe1 \xe2 \xe3 
+Starting byte set: \x09 \x20 A \xc2 \xe1 \xe2 \xe3 
     CDBABC
  0: A
     
@@ -2170,6 +2170,14 @@ Options: utf8
 No first char
 Need char = 'A'
 Subject length lower bound = 2
-Starting byte set: \x0a \x0b \x0c \x0d \x85 \xe2 
+Starting byte set: \x0a \x0b \x0c \x0d \xc2 \xe2 
+
+/\s?xxx\s/8SI
+Capturing subpattern count = 0
+Options: utf8
+No first char
+Need char = 'x'
+Subject length lower bound = 4
+Starting byte set: \x09 \x0a \x0c \x0d \x20 x 
 
 /-- End of testinput5 --/
